parser/src/parser/snapshots/parser__parser__parser__tests__await_expression.snap
---
source: parser/src/parser/parser.rs
description: await a
---
Module {
    node: Node {
        start: 0,
        end: 7,
    },
    body: [
        ExpressionStatement(
            Await(
                Await {
                    node: Node {
                        start: 0,
                        end: 7,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 6,
                                end: 7,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
