parser/src/parser/snapshots/parser__parser__parser__tests__binary_op-9.snap
---
source: parser/src/parser/parser.rs
description: a >> b
---
Module {
    node: Node {
        start: 0,
        end: 6,
    },
    body: [
        ExpressionStatement(
            BinOp(
                BinOp {
                    node: Node {
                        start: 0,
                        end: 6,
                    },
                    op: RShift,
                    left: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    right: Name(
                        Name {
                            node: Node {
                                start: 5,
                                end: 6,
                            },
                            id: "b",
                        },
                    ),
                },
            ),
        ),
    ],
}
