parser/src/parser/snapshots/parser__parser__parser__tests__class_def_statement-3.snap
---
source: parser/src/parser/parser.rs
description: "class a(b, c): pass"
---
Module {
    node: Node {
        start: 0,
        end: 19,
    },
    body: [
        ClassDef(
            ClassDef {
                node: Node {
                    start: 0,
                    end: 19,
                },
                name: "a",
                bases: [
                    Name(
                        Name {
                            node: Node {
                                start: 8,
                                end: 9,
                            },
                            id: "b",
                        },
                    ),
                    Name(
                        Name {
                            node: Node {
                                start: 11,
                                end: 12,
                            },
                            id: "c",
                        },
                    ),
                ],
                starargs: None,
                keywords: [],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 15,
                                end: 19,
                            },
                        },
                    ),
                ],
                decorator_list: [],
            },
        ),
    ],
}
